@@ -21,6 +21,7 @@ Added support for `const` on the left side of the type ("west const")
 Added support for forward declaration of `struct`s
 Added support for multi line macros with `\`s before newlines
 Added support for `__LINE__` macro
+Added support for `__FILE__` macro
 
 * 1.11 - 2023-11-01
 ** Added
